# spartan

./: .gitignore  .lvimrc  .travis.yml  LICENSE  Makefile  Makefile.am  README  README.md  _config.yml  configure.ac  index.html  index.md  makefile  params.json  requirements.txt  setup.cfg  setup.py  test.py  test.sh
api-doc/: index.html
conf/: mpi-cluster  mpi-local
data/: valgrind-python.supp  valgrind.supp
doc/: Makefile  conf.py  index.rst  spartan.array.rst  spartan.dense.rst  spartan.examples.rst  spartan.examples.sklearn.cluster.rst  spartan.examples.sklearn.linear_model.rst  spartan.examples.sklearn.rst  spartan.expr.rst  spartan.rpc.rst  spartan.rst  spartan.wrap.rst
pytable/: __init__.py  sparrow.i  support.cc  support.h  util.py
pytable/array/: __init__.py  compile_expr.py  distarray.py  expr.py  extent.py  prims.py  tile.py
python/spartan/: __init__.py  api.py  cloudpickle.py  cluster.py  config.py  node.py  spartan.i  support.cc  support.h  util.py  worker.py  wrap.py
python/tests/: benchmark_dot.py  benchmark_lreg.py  benchmark_slice.py  test_backend.py  test_common.py  test_compile.py  test_distarray.py  test_distarray_backend.py  test_extent.py  test_kmeans.py  test_lreg.py  test_maptiles.py  test_matmul.py  test_netflix.py  test_numexpr.py  test_pytable.py  test_ravel.py  test_reduce.py  test_reshape.py  test_slice.py  test_stencil.py
sparrow/: kernel.h  master.cc  master.h  sparrow.proto  sparrow_service.rpc  table-inl.h  table.cc  table.h  val.h  worker.cc  worker.h
sparrow/array/: extent.py
sparrow/python/: sparrow.i  support.cc  support.h
sparrow/util/: common.cc  common.h  file.cc  file.h  hash.h  marshal.h  registry.h  rpc.cc  rpc.h  stats.h  stringpiece.cc  stringpiece.h  timer.h
spartan/: Makefile  __init__.py  blob_ctx.py  blob_ctx.pyx  blobctx.h  cblob_ctx.h  cconfig.cc  cconfig.h  ccore.h  client.cc  cloudpickle.py  cloudpickle.pyx  cluster.py  config.cc  config.h  config.py  config.pyx  config_base.cc  config_base.h  core.h  core.py  core.pyx  cworker.h  kernel.h  master.cc  master.h  master.py  msg.py  node.py  py-support.cc  py-support.h  refptr.h  sparse.pyx  sparse_multiply.pyx  sparse_update.pyx  spartan_service.rpc  table-inl.h  table.cc  table.h  unordered_map.pxd  (+4 more)
spartan/array/: cextent.cc  cextent.h  cextent.pxd  compile_expr.py  ctile.h  distarray.py  extent.py  extent.pyx  slicing.pyx  sparse.pyx  tile.py  tile.pyx  unordered_map.pxd
spartan/dense/: distarray.py  extent.py  tile.py
spartan/examples/: DisDCA_svm.py  als.py  black_scholes.py  canopy_clustering.py  cholesky.py  conj_gradient.py  disdca_svm.py  finance.py  fuzzy_kmeans.py  jacobi.py  kmeans.py  lanczos.py  lda.py  linear_regression.py  logistic_regression.py  mnist_mlp.py  naive_bayes.py  nbody.py  netflix.py  netflix_core.pyx  pca.py  ridge_regression.py  sgd.py  simple_svm.py  spectral_clustering.py  streaming_kmeans.py  svd.py  swaption.py
spartan/expr/: __init__.py  arrays.py  assign.py  backend.py  base.py  broadcast.py  builtins.py  checkpoint.py  creation.py  dot.py  extent_map.py  filter.py  fio.py  index.py  local.py  logic.py  loop.py  manipulation.py  map.py  map_extents.py  map_tiles.py  map_with_location.py  mathematics.py  mathlib.py  maxflow.cc  ndarray.py  node.py  optimize.py  outer.py  reduce.py  reduce_extents.py  region_map.py  reshape.py  retile.py  scan.py  shuffle.py  slice.py  sort.py  sorting.py  srandom.py  (+6 more)
spartan/fastrpc/: __init__.py  common.py  service.rpc
spartan/pytable/: __init__.py  spartan.i  util.py
spartan/rpc/: __init__.py  cloudpickle.pyx  common.py  common.pyx  core.pyx  future.py  msg.py  rlock.pxd  rlock.pyx  rpc_array.py  serialization.pyx  serialization_buffer.pyx  unordered_set.pxd  zeromq.pxd  zeromq.py  zeromq.pyx
spartan/sparse/: __init__.py
spartan/src/: Makefile
spartan/util/: common.cc  common.h  marshal.h  registry.cc  registry.h  stats.h  stringpiece.h  timer.h
spartan/wrap/: __init__.py  spartan.i  spartan_wrap.cpp  spartan_wrap.py
src/: sparrow.proto
src/kernel/: global-table.cc  global-table.h  kernel.h  shard.cc  (+2 more)
tests/: benchmark_convnet.py  benchmark_dot.py  benchmark_finance.py  benchmark_kmeans.py  benchmark_lreg.py  benchmark_nbody.py  benchmark_netflix.py  benchmark_pagerank.py  benchmark_slice.py  benchmark_swaption.py  benchmark_trivial.py  netflix.py  test-accum.cc  test-common.h  test-iterator.cc  test-put.cc  test_als.py  test_assign.py  test_autotiling.py  test_backend.py  test_black_scholes.py  test_broadcast.py  test_builtins.py  test_canopy_clustering.py  test_cg.py  test_checkpoint.py  test_cholesky.py  test_common.py  test_convnet.py  test_creation.py  test_distarray.py  test_dot.py  test_elementwise.py  test_extent.py  test_finance.py  test_fio.py  test_forest.py  test_fusion.py  test_fuzzy_kmeans.py  test_isomap.py  (+51 more)
(+301 files in other folders)
